<?xml version="1.0"?>
<package format="2">
  <name>unitv_ros</name>
  <version>0.0.1</version>
  <description>The unitv_ros package</description>

  <maintainer email="708yamaguchi@gmail.com">Naoya Yamaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

</package>
